--- a/jenkins-groovy/local-jenkins/Dockerfile
+++ b/jenkins-groovy/local-jenkins/Dockerfile
@@ -3,3 +3,7 @@ ENV JAVA_OPTS="-Djenkins.install.runSetupWizard=false"
 COPY security.groovy /usr/share/jenkins/ref/init.groovy.d/security.groovy
 COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
 RUN jenkins-plugin-cli --plugin-file /usr/share/jenkins/ref/plugins.txt
+
+COPY seeddsl.groovy /usr/share/jenkins/seeddsl.groovy
+COPY config.xml /usr/share/jenkins/seed-job-config.xml
+COPY create-seed-job.groovy /usr/share/jenkins/ref/init.groovy.d/create-seed-job.groovy
